--- a/index.ipynb
+++ b/index.ipynb
@@ -48,13 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Import sqlite3, then create the SQL database/connect to it (creating the database connection will create a DB)"
+    "\n",
+    "# Import sqlite3, then create the SQL database/connect to it (creating the database connection will create a DB)\n",
+    "\n",
+    "import sqlite3 \n",
+    "connection = sqlite3.connect('planets.db')\n"
    ]
   },
   {
@@ -66,13 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; create a cursor object so you can execute statement against the database."
+    "#Your code here; create a cursor object so you can execute statement against the database.\n",
+    "cursor = connection.cursor()\n"
    ]
   },
   {
@@ -118,13 +119,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table planets already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-b70a9f74f858>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mnum_of_moons\u001b[0m \u001b[0mINTEGER\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m mass REAL);\n\u001b[0;32m---> 10\u001b[0;31m ''')\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: table planets already exists"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here; create the table as described above."
+    "#Your code here; create the table as described above.\n",
+    "\n",
+    "cursor.execute('''CREATE TABLE planets\n",
+    "\n",
+    "(id INTEGER PRIMARY KEY,\n",
+    "name TEXT,\n",
+    "color TEXT,\n",
+    "num_of_moons INTEGER,\n",
+    "mass REAL);\n",
+    "''')"
    ]
   },
   {
@@ -143,13 +163,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f72fed39110>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code for reading and executing alter.sql"
+    "# Your code for reading and executing alter.sql\n",
+    "\n",
+    "cursor.execute('''ALTER TABLE planets ADD COLUMN rings BOOLEAN;''')\n"
    ]
   },
   {
@@ -1084,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
